<resources>
    <string name="app_name">Episode++</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_fragment">Edit Fragment</string>
    <string name="enter_new_title">enter new title</string>
    <string name="remove_image">Remove Image</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="import_export">Import/Export</string>
    <string name="import_description">Select a file containing series</string>
    <string name="name_import">Import</string>
    <string name="export_description">Enter filename to export to</string>
    <string name="export">Export</string>
    <string name="title_placeholder">_title</string>
    <string name="counter_placeholder">_counter</string>
    <string name="selected">Selected</string>
    <string name="season_placeholder">_Season</string>
    <string name="episode_placeholder">_Episode</string>
    <string name="sort_by">Sort By</string>
    <string name="title_a_z">Title (A-Z)</string>
    <string name="title_z_a">Title (Z-A)</string>
    <string name="rating_high_low">Rating (high-low)</string>
    <string name="rating_low_high">Rating (low-high)</string>
    <string name="date_new_old">Date (new-old)</string>
    <string name="date_old_new">Date (old-new)</string>
    <string name="sort">Sort</string>
    <string name="edit_series">Edit series</string>
    <string name="delete_series">Delete series</string>
    <string name="name_new">New</string>
    <string name="exit">Exit</string>
    <string name="delete_selected">Delete selected</string>
    <string name="export_complete">Export complete.</string>
    <string name="import_series">Import complete.</string>
    <string name="series_already_exists">Series already exists</string>
    <string name="series_created">Series created.</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="choose_file_to_import">Choose file to import:</string>
    <string name="enter_filename_to_export_to">Enter filename to export to:</string>
    <string name="delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="number">number</string>
    <string name="OK">OK</string>
    <string name="value_out_of_range">Value out of range</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="failed_to_fetch_image">Failed to fetch image</string>
</resources>