<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    tools:context=".FragmentEditSeries">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center"
        android:text="@string/import_export"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_gravity="center"
        style="@style/TitleTextStyle"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/padding_normal_large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_description"
        style="@style/BodyTextStyle"/>

    <Button
        android:id="@+id/import_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_import"
        style="@style/PositiveButtonStyle"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/padding_normal_large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_description"
        style="@style/BodyTextStyle"/>

    <Button
        android:id="@+id/export_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        style="@style/PositiveButtonStyle"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/padding_normal_large"/>


    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:paddingBottom="@dimen/padding_normal"
        style="@style/NegativeButtonStyle"/>

</LinearLayout>