<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.SeriesTracker.Item">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:orientation="vertical"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_placeholder"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counter_placeholder"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:textColor="@color/primary_dark"/>

                <RatingBar
                    android:id="@+id/ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.SeriesTracker.RatingBarIndicatorSmall"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_24"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_weight="3"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/selected_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_70"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TitleTextStyleCompliment"
                android:text="@string/selected"/>

        </FrameLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>