<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FragmentExpanded">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_24"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/foreground_fading_edges"/>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal"
            android:layout_gravity="bottom">

            <RelativeLayout
                android:id="@+id/layout_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/season_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    style="@style/Theme.SeriesTracker.Button.Left"/>


                <TextView
                    android:id="@+id/season_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/season_placeholder"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>

                <ImageButton
                    android:id="@+id/season_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    style="@style/Theme.SeriesTracker.Button.Right"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layout_season">

                <ImageButton
                    android:id="@+id/episode_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    style="@style/Theme.SeriesTracker.Button.Left"/>


                <TextView
                    android:id="@+id/episode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episode_placeholder"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>

                <ImageButton
                    android:id="@+id/episode_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    style="@style/Theme.SeriesTracker.Button.Right"/>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        style="@style/Theme.SeriesTracker.Toolbar"
        app:menu="@menu/item_expanded_menu"
        app:contentInsetStart="0dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/toolbar_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left_small"
                android:backgroundTint="@color/transparent"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_placeholder"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>